Implemented: The task is editable in the ToDo section

--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
             <div class="col-3" id="inprogress">
                 <div id="inprogressHead">In Progress</div>
             </div>
-            <div class="col-3" id="done">Done</div>
+            <div class="col-3" id="done">
+                <div id="doneHead">Done</div>
+            </div>
         </div>
         <div id="modalDiv" class="modal"></div>
         <script type="text/javascript" src="js/createSection.js"></script>
+        <script type="text/javascript" src="js/todoSection.js"></script>
     </body>
 </html>
