--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
         <div id="modalDiv" class="modal"></div>
         <script type="text/javascript" src="js/createSection.js"></script>
         <script type="text/javascript" src="js/todoSection.js"></script>
+        <script type="text/javascript" src="js/inprogSection.js"></script>
     </body>
 </html>
