--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
         <script type="text/javascript" src="js/createSection.js"></script>
         <script type="text/javascript" src="js/todoSection.js"></script>
         <script type="text/javascript" src="js/inprogSection.js"></script>
+        <script type="text/javascript" src="js/doneSection.js"></script>
     </body>
 </html>
