--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <nav>
-            <a href="index.html">Home</a>
+            <a href="index.html">Home </a>|
+            <a href="">Members</a>
             <a href="" id="user">ShamliKhan</a>
         </nav>
         <div class="row" id="parent">
