Login feature added

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
         <title>Task Tracker</title>
         <link rel="stylesheet" href="assets/main.css"></link>
         <link rel="stylesheet" href="assets/custom.css"></link>
+        <script type="text/javascript" src="js/global.js"></script>
     </head>
-    <body>
+    <body onload="getUser()">
         <nav>
-            <a href="index.html">Home </a>|
+            <a href="index.html">Home </a>
             <a href="">Members</a>
-            <a href="" id="user">ShamliKhan</a>
+            <a href="" id="user">User</a>
         </nav>
         <div class="row" id="parent">
             <div class="col-3" id="create">
