--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Task Tracker</title>
         <link rel="stylesheet" href="assets/main.css"></link>
         <link rel="stylesheet" href="assets/custom.css"></link>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <script type="text/javascript" src="js/global.js"></script>
     </head>
     <body onload="getUser()">
