--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row" id="parent">
             <div class="col-3" id="create">
                 <button type="button" id="addNew" onclick="addNewTask()"><b>Add Assignment</b></button>
-                <p id="history">Assignment History</p>
+                <p id="history"><i>Assignment History</i></p>
             </div>
             <div class="col-3" id="todo">
                 <div id="todoHead">To Do</div>
