--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     </head>
     <body onload="getUser()">
         <nav>
-            <a href="index.html">Home </a>
-            <a href="">Members</a>
-            <a href="" id="user">User</a>
+            <a >Home </a>
+            <a >Members</a>
+            <a id="user">User</a>
         </nav>
         <div class="row" id="parent">
             <!-- div class="col-4" id="create">
